Production optimization: caching, rate limiting, smart refresh, token auth

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-# Flask Secret Key
+# Flask Configuration
 SECRET_KEY=generate-random-secret-key-here
+FLASK_ENV=production
+DEBUG=False
 
 # Refresh Token (protect refresh endpoints)
 REFRESH_TOKEN=choose-a-secret-refresh-token
 
-# Environment
-FLASK_ENV=production
-DEBUG=False
-
-# Database path
+# Database Configuration
 DATABASE_PATH=data/fpl_data.db
 
 # Logging
@@ -18,7 +16,7 @@ LOG_FILE=logs/app.log
 # API Rate Limiting
 API_RATE_LIMIT_DELAY=0.5
 
-# Refresh Schedule
+# Refresh Schedule (for cron)
 REFRESH_HOUR=3
 REFRESH_MINUTE=0
 REFRESH_DAY_OF_WEEK=tue
