--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==3.0.0
 gunicorn==21.2.0
 requests==2.31.0
-APScheduler==3.10.4
 python-dateutil==2.8.2
+python-dotenv==1.0.0
+Flask-Caching==2.1.0
+Flask-Limiter==3.5.0
